# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16HdvZpgrG9fKYZxa1rRQMVCzs8bLCsln2pP2ZiDGSrZM=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xy_QnD4KWxLPxyS60SFoxg_umqhAJG1Ivc4xhv9Fz-Ig=',
      'err': 0,
    }),
  ])
# ---
